Fixed overflow issues for empty-list image (#28)

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -440,16 +440,21 @@ h6 {
 
 .movie-cards__empty-list {
     display: grid;
-    place-items: center;
+    justify-items: center;
     gap: .75rem;
+    overflow: hidden;
 }
 
 /* Strictly for the lulz */
 
 .movie-cards__empty-list-image {
-    inline-size: calc(100% / 1.5); /* To not cause overflow */
-    object-fit: cover;
     animation: pulsate 2s ease-in-out infinite alternate;
+
+    & img {
+        max-inline-size: calc((100% / 1.5)) - (1.25rem * 2);
+        aspect-ratio: 1;
+        object-fit: cover;
+    }
 }
 
 @keyframes pulsate {
@@ -471,6 +476,7 @@ h6 {
     font-size: 1.125rem;
     font-weight: 400;
 }
+
 /* Footer */
 
 .footer {
